--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "mocha": "^8.0.1",
     "mocha-jsdom": "~1.1.0",
     "mocha-multi": "1.0.1"
+  },
+  "dependencies": {
+    "utils-extend": "^1.0.8"
   }
 }
